Bugfix: update align elements

--- a/src/style/profile.css
+++ b/src/style/profile.css
@@ -24,11 +24,12 @@ body {
     overflow-x: hidden;
 }
 .main-container {
-    display: block;
+    display: flex;
     flex-grow:1;
     padding: 2rem;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
 
 @media (max-width: 768px){
@@ -38,9 +39,6 @@ body {
         touch-action: pan-y;
     }
     .main-container {
-        display: flex;
-        flex-direction: column;
-
         padding: 0;
         align-items: stretch;
     }
@@ -184,7 +182,6 @@ body {
 @media (max-width: 768px){
     .status-block {
         border-radius: 0px;
-
         margin: 0;
     }
     .status-indicator {
